# layers

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  index.html  manifest.json  tmp.md
.claude/commands/: loc.md
.cursor/rules/: changelog.mdc
docs/: collaboration.md  user-guide.md
src/: audio.rs  automation.rs  clipboard.rs  component.rs  context_menu.rs  effects.rs  entity_id.rs  ephemeral.rs  events.rs  export.rs  gpu.rs  grid.rs  group.rs  history.rs  hit_testing.rs  icons.rs  instruments.rs  layers.rs  main.rs  master.rs  midi.rs  network.rs  operations.rs  p2p.rs  palette.rs  plugin_editor.rs  plugins.rs  project.rs  protocol.rs  regions.rs  rendering.rs  settings.rs  storage.rs  surreal_client.rs  text_note.rs  theme.rs  types.rs  user.rs  waveform.rs  ws_client.rs
src/events/: commands.rs  cursor.rs  keyboard.rs  mod.rs  mouse.rs  redraw.rs  scroll.rs
src/storage/: conversions.rs  helpers.rs  local.rs  mod.rs  models.rs  remote.rs
src/tests/: arrow_nudge.rs  automation.rs  browser.rs  effect_chains.rs  follow_mode.rs  groups.rs  history.rs  hit_testing.rs  latency_compensation.rs  layers.rs  master.rs  midi_and_instruments.rs  mod.rs  monitoring.rs  operations.rs  palette.rs  playhead_indicator.rs  plugin_sync.rs  plugins.rs  right_window.rs  session.rs  solo_mute.rs  state_mutations.rs  storage_roundtrip.rs  takes.rs  text_notes.rs  tooltip.rs  vertical_snap.rs  waveform_overlap.rs
src/ui/: browser.rs  context_menu.rs  dropdown.rs  export_window.rs  hit_testing.rs  mod.rs  palette.rs  plugin_editor.rs  rendering.rs  right_window.rs  settings_window.rs  solo_mute.rs  toast.rs  tooltip.rs  transport.rs  waveform.rs
vst3-gui/: build.rs
vst3-gui/cpp/: CMakeLists.txt
vst3-gui/cpp/include/: vst3_gui.h  vst3_gui_internal.h
vst3-gui/cpp/src/: vst3_gui.mm  vst3_gui_common.cpp  vst3_gui_mac.mm  vst3_gui_win.cpp
vst3-gui/src/: lib.rs
