[package]
name = "layers"
version = "0.1.0"
edition = "2021"
default-run = "layers"

[features]
default = ["native"]
native = [
    "dep:cpal",
    "dep:muda",
    "dep:rfd",
    "dep:dirs",
    "dep:hound",
    "dep:symphonia",
    "dep:pollster",
    "dep:env_logger",
    "dep:surrealdb",
    "dep:futures-util",
    "tokio/rt-multi-thread",
]

[dependencies]
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["sync", "macros", "time"] }
glyphon = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
indexmap = { version = "2", features = ["serde"] }

# Native-only dependencies (optional)
pollster = { version = "0.4", optional = true }
hound = { version = "3.5", optional = true }
cpal = { version = "0.15", optional = true }
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac", "isomp4", "aac"], optional = true }
env_logger = { version = "0.11", optional = true }
surrealdb = { version = "3", features = ["kv-rocksdb", "protocol-ws"], optional = true }
futures-util = { version = "0.3", optional = true }
dirs = { version = "6", optional = true }
rfd = { version = "0.15", optional = true }
muda = { version = "0.17", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
vst3-gui = { path = "vst3-gui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement", "CssStyleDeclaration", "HtmlElement", "KeyboardEvent", "EventTarget"] }
console_log = "1"
console_error_panic_hook = "0.1"
web-time = "1"

[[bin]]
name = "layers"
path = "src/main.rs"

[[bin]]
name = "test_vst3"
path = "src/bin/test_vst3.rs"
required-features = ["native"]

[[bin]]
name = "surreal_server"
path = "src/bin/surreal_server.rs"
required-features = ["native"]
